# bounded-relative-finder

./: CHANGELOG.md  LICENSE  README.md  bounded-relative-finder.cabal
Data/: BoundedRelativeFinder.hs
Data/BoundedRelativeFinder/Internal/: IntMap.hs
test/: BoundedRelativeFinderTest.hs
