cabal-version: 2.4
name: bounded-relative-finder
version: 0.1.0.0
synopsis: A bounded relative finder algorithm inspired by SymSpell.

description: An algorithm inspired by SymSpell for relative-finding, a problem related to nearest-neighbor finding.
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license: BSD-3-Clause
license-file: LICENSE
author: Edmund Noble
maintainer: edmundnoble@gmail.com

copyright: OQuant 2020
category: Data
extra-source-files: CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/OQuant/bounded-relative-finder
  branch: main

common depends
  build-depends: 
    base ^>= 4.14.1.0,
    bytestring >= 0.10.12 && < 0.11,
    containers >= 0.6.3.1 && < 0.7,
    deepseq >= 1.4.4 && < 1.5,
    unordered-containers >= 0.2.13 && < 0.3,
    hashable >= 1.3.1 && < 1.4,
    mtl >= 2.2.2 && < 2.3,
    text ^>= 1.2.4 && < 1.3,
    vector >= 0.12.3 && < 0.13
  ghc-options: -Wno-partial-type-signatures
  default-extensions: 
    DeriveFoldable,
    DeriveFunctor,
    DeriveTraversable,
    DeriveGeneric,
    TupleSections,
    FlexibleContexts,
    RecursiveDo,
    BangPatterns 
  default-language: Haskell2010

library
    import: depends
    exposed-modules: Data.BoundedRelativeFinder
    other-modules: Data.BoundedRelativeFinder.Internal.IntMap

    hs-source-dirs: .

test-suite bounded-relative-finder-test
    import: depends
    build-depends: 
      bounded-relative-finder,
      hedgehog
    type: exitcode-stdio-1.0
    hs-source-dirs: test
    main-is: BoundedRelativeFinderTest.hs

