cabal-version: 2.4
name: bounded-relative-finder
version: 0.1.0.0
synopsis: A bounded relative finder algorithm inspired by SymSpell.

description: An algorithm inspired by SymSpell for relative-finding, a problem related to nearest-neighbor finding.
homepage:

license: BSD-3-Clause
license-file: LICENSE
author: Edmund Noble
maintainer: edmundnoble@gmail.com

copyright: OQuant 2020
category: Data
extra-source-files: CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/OQuant/bounded-relative-finder
  branch: main

common depends
  build-depends: 
    base ^>= 4.14.1.0,
    bytestring ^>= 0.10 || ^>= 0.11,
    containers ^>= 0.6,
    deepseq ^>= 1.4,
    unordered-containers ^>= 0.2,
    hashable ^>= 1.3,
    mtl ^>= 2.2,
    text ^>= 1.2,
    vector ^>= 0.12
  ghc-options: -Wno-partial-type-signatures
  default-extensions: 
    DeriveFoldable,
    DeriveFunctor,
    DeriveTraversable,
    DeriveGeneric,
    TupleSections,
    FlexibleContexts,
    RecursiveDo,
    BangPatterns 
  default-language: Haskell2010

library
    import: depends
    exposed-modules: Data.BoundedRelativeFinder
    other-modules: Data.BoundedRelativeFinder.Internal.IntMap
    hs-source-dirs: .

test-suite bounded-relative-finder-test
    import: depends
    build-depends: 
      bounded-relative-finder,
      hedgehog ^>= 1.0.5
    type: exitcode-stdio-1.0
    hs-source-dirs: test
    main-is: BoundedRelativeFinderTest.hs

